# rust-al

./: .gitignore  Cargo.toml  README.md
bonus/file_adapter/: Cargo.toml
bonus/file_adapter/src/: main.rs
foundations/session1/authentication/src/: lib.rs
foundations/session1/login_manager/src/: main.rs
foundations/session2/divide_work/src/: main.rs
foundations/session2/footgun/src/: main.rs
foundations/session2/hello/src/: main.rs
foundations/session2/parking/src/: main.rs
foundations/session2/rwlocks/src/: main.rs
foundations/session2/scoped_threads/src/: main.rs
foundations/session2/thread_builder/src/: main.rs
foundations/session2/threadpool/src/: main.rs
foundations/session3/async_channels/: Cargo.toml
foundations/session3/async_channels/src/: main.rs
foundations/session3/async_mutex/src/: main.rs
foundations/session3/errors/: Cargo.toml
foundations/session3/errors/src/: main.rs
foundations/session3/fileio/: Cargo.toml
foundations/session3/hello_async/src/: main.rs
foundations/session3/pinning/: Cargo.toml
foundations/session3/pinning/src/: main.rs
foundations/session3/tcpserver/src/: main.rs
foundations/session3/tokio_select/src/: main.rs
foundations/session3/tokio_select_broadcast/src/: main.rs
foundations/session3/tokio_testing/: Cargo.toml
foundations/session4/atomicrefcount/src/: main.rs
foundations/session4/db/: Cargo.toml
foundations/session4/db/src/: main.rs
foundations/session4/external_arc_mutex/: Cargo.toml
foundations/session4/internal_arc_mutex/src/: main.rs
foundations/session4/refcell/src/: main.rs
foundations/session4/refcount/src/: main.rs
foundations/session4/save_dynamic_bytes/src/: main.rs
foundations/session4/thumbs/: Cargo.toml
foundations/session4/thumbs/src/: index.html
foundations/session4/web_service/src/: main.rs
foundations/session5/collector/src/: data_collector.rs  main.rs
foundations/session5/collector_server/: Cargo.toml
foundations/session5/collector_server/migrations/: 20250131165107_initial.sql
foundations/session5/collector_server/src/: collector.html  collector.rs
foundations/session5/shared_data/: Cargo.toml
services/http_server/: Cargo.toml
services/http_server/src/: main.rs
services/http_server/web/: index.html
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/login/src/: main.rs
session1/login_manager/: Cargo.toml
session1/variables/src/: main.rs
session2/affinity/src/: main.rs
session2/channels/src/: main.rs
session2/dashing/src/: main.rs
session2/deadlocks/src/: main.rs
session2/hello/src/: main.rs
session2/mutexes/src/: main.rs
session2/threadpool/: Cargo.toml
session2/tprio/src/: main.rs
session2/workers/src/: main.rs
session3/async_mutex/: Cargo.toml
session3/blocking/: Cargo.toml
session3/blocking/src/: main.rs
session3/fileio/src/: main.rs
session3/hello_tokio/: Cargo.toml
session3/hello_tokio/src/: main.rs
session3/restclient/: Cargo.toml
session3/restclient/src/: main.rs
session3/tokio_select_broadcast/: Cargo.toml
session3/tokio_testing/src/: lib.rs
session4/atomicrefcount/: Cargo.toml
session4/db/: hello_db.db  hello_db.db-shm  hello_db.db-wal
session4/db/migrations/: 20250121115719_initial.sql  20250121122515_more_messages.sql
session4/dropping/src/: main.rs
session4/external_arc_mutex/src/: main.rs
session4/generics/src/: main.rs
session4/generics_and_iterators/src/: main.rs
session4/internal_arc_mutex/: Cargo.toml
session4/lifetimes/src/: main.rs
session4/linked_list/src/: main.rs
session4/operator_overloading/src/: main.rs
session4/save_bytes/: Cargo.toml
session4/save_dynamic_bytes/: Cargo.toml
session4/smart_pointer/src/: main.rs
session4/thumbs/migrations/: 20250121220324_initial.sql
session4/thumbs/src/: main.rs  redirect.html  search.html
session4/traits/src/: main.rs
session4/web_service/: Cargo.toml
session4/web_service/src/: hello.html
session5/collector/src/: data_collector.rs  errors.rs  main.rs  sender.rs
session5/collector_server/: Cargo.toml
session5/collector_server/src/: api.rs  collector.rs  main.rs
session5/shared_data/: Cargo.toml
session5/shared_data/src/: lib.rs
