[package]
name = "rust-ardanlabs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "session1/hello_world", 
    "session1/variables",
    "session1/authentication", 
    "session1/login", 
    "session1/login_manager", 
    "session2/hello",
    "session2/divide_work",
    "session2/thread_builder",
    "session2/scoped_threads",
    "session2/footgun",
    "session2/mutexes",
    "session2/rwlocks",
    "session2/deadlocks",
    "session2/dashing",
    "session2/parking",
    "session2/channels",
    "session2/workers",
    #threadpool -> workers2
    "session2/threadpool",
    "session2/affinity",
    "session2/tprio",
    "session3/hello_async",
    "session3/hello_tokio",
    "session3/blocking",
    "session3/tokio_testing",
    "session3/errors",
    "session3/fileio",
    "session3/restclient",
    "session3/tcpserver",
    "session3/async_channels",
    "session3/async_mutex",
    "session3/tokio_select",
    "session3/tokio_select_broadcast",
    "session3/pinning",
    "session4/logspan",
    #"session4/db",
    #"session4/web_service",
    #"session4/thumbs",
    "session4/dropping",
    "session4/smart_pointer",
    "session4/refcount",
    "session4/atomicrefcount",
    "session4/external_arc_mutex",
    "session4/internal_arc_mutex",
    "session4/refcell",
    "session4/lifetimes",
    "session4/traits",
    "session4/operator_overloading",
    "session4/generics_and_iterators",
    "session4/linked_list",
    "session4/save_bytes",
    "session4/save_dynamic_bytes", #protocol
    "session5/shared_data",
    "session5/collector",
    "session5/collector_server",
    "bonus/file_adapter",
]

[profile.release]
opt-level = "z" # z means optimize for size
strip = true    # strip means remove debug symbols
lto = true      # lto means link time optimization
codegen-units = 1  # no parallel codegen
#panic = "abort" # abort means no unwind
