[workspace]
resolver = "2"
members = [
    "foundations/session1/hello_world", 
    "foundations/session1/variables",
    "foundations/session1/authentication", 
    "foundations/session1/login", 
    "foundations/session1/login_manager", 
    "foundations/session2/hello",
    "foundations/session2/divide_work",
    "foundations/session2/thread_builder",
    "foundations/session2/scoped_threads",
    "foundations/session2/footgun",
    "foundations/session2/mutexes",
    "foundations/session2/rwlocks",
    "foundations/session2/deadlocks",
    "foundations/session2/dashing",
    "foundations/session2/parking",
    "foundations/session2/channels",
    "foundations/session2/workers",
    #threadpool -> workers2
    "foundations/session2/threadpool",
    "foundations/session2/affinity",
    "foundations/session2/tprio",
    "foundations/session3/hello_async",
    "foundations/session3/hello_tokio",
    "foundations/session3/blocking",
    "foundations/session3/tokio_testing",
    "foundations/session3/errors",
    "foundations/session3/fileio",
    "foundations/session3/restclient",
    "foundations/session3/tcpserver",
    "foundations/session3/async_channels",
    "foundations/session3/async_mutex",
    "foundations/session3/tokio_select",
    "foundations/session3/tokio_select_broadcast",
    "foundations/session3/pinning",
    #"foundations/session4/logspan",
    "foundations/session4/db",
    "foundations/session4/web_service",
    "foundations/session4/thumbs",
    "foundations/session4/dropping",
    "foundations/session4/smart_pointer",
    "foundations/session4/refcount",
    "foundations/session4/atomicrefcount",
    "foundations/session4/external_arc_mutex",
    "foundations/session4/internal_arc_mutex",
    "foundations/session4/refcell",
    "foundations/session4/lifetimes",
    "foundations/session4/traits",
    "foundations/session4/operator_overloading",
    "foundations/session4/generics_and_iterators",
    "foundations/session4/linked_list",
    "foundations/session4/save_bytes",
    "foundations/session4/save_dynamic_bytes", #protocol
    "foundations/session5/shared_data",
    "foundations/session5/collector",
    "foundations/session5/collector_server",
    "bonus/file_adapter", "services/http_server",
]
#
#[profile.release]
#opt-level = "z" # z means optimize for size
#strip = true    # strip means remove debug symbols
#lto = true      # lto means link time optimization
#codegen-units = 1  # no parallel codegen
##panic = "abort" # abort means no unwind
