[workspace]
resolver = "2"
members = [
    "foundations/session1/*", 
    #threadpool -> workers2
    "foundations/session2/*",
    "foundations/session3/*",
    "foundations/session4/*",
    "foundations/session5/*",
    "bonus/file_adapter",
    "services/http_server",
]
exclude = [
    "foundations/session4/web_service",
    "foundations/session4/thumbs",
]
#
#[profile.release]
#opt-level = "z" # z means optimize for size
#strip = true    # strip means remove debug symbols
#lto = true      # lto means link time optimization
#codegen-units = 1  # no parallel codegen
##panic = "abort" # abort means no unwind
