[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#cargo add serde -F derive
#cargo add serde_json
[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
